tdf#156842 increase scale for external PDF data

For some unknown reason, the scale is 8 times larger than for
non-external PDF XObjects.

This fix also allows the CppunitTest_vcl_pdfexport to run
successfully on macOS.

Change-Id: I166914e6ac575c50985efba3fb7a38ec758dea1a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157090
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit c2d7c8e5c616980d5fa77ac48babbf27342b2f0a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157114
Reviewed-by: Patrick Luby <plubius@neooffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>